# manager_bot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.production.yml  docker-compose.yml  env.example  main.py  nginx.conf.example  pyproject.toml  requirements.txt
app/: main.py
app/admin/: adminview.py  auth.py
app/bot/: filters.py  init_bot.py  lexicon.py  routers.py  scheduler.py  states.py  utils.py
app/bot/handlers/: admin.py  other_handlers.py  region_admin.py  registration.py  registration_handlers.py  reports.py  user_handlers.py  user_menu.py
app/bot/handlers/callbacks/: main_menu.py  menu_processor.py  menucallback.py  (+1 more)
app/bot/keyboards/: banners.py  buttons.py  calendar_kb.py  captions.py  main_kb_builder.py  registration_kb.py
app/core/: config.py  constants.py  database.py
app/dao/: base.py
app/migrations/: env.py
app/migrations/versions/: 09271c9f26c7_reports_add_user_id.py  28ac51033090_create_reports.py  527b4a7fdf67_regions_user_fix_relationship.py  7622aa4aac82_regions_ceo_user_fix.py  8c8b1f8007f5_regions_users_relationship.py  90ac23f24b8d_points_regions_models.py  ab15d64fd6e3_initial.py  b3db2b9bad05_update_reports_model.py  b402c9f4d308_update_reports_model.py  c0bb99e8bf46_regions_ceo_fix.py  c35d3e0b2eb0_update_workdsays_user_id_field.py  ca740ea08d9a_update_phone_number_type.py  cb84c2c74580_update_reports_model_date.py  ee760463f291_update_workdsays_user_id_field.py
app/points/: constants.py  dao.py  models.py
app/regions/: dao.py  models.py
app/reports/: dao.py  models.py
app/users/: dao.py  models.py
